--- a/piatrika/package.json
+++ b/piatrika/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "^6.1.0",
     "bootstrap": "^4.3.1",
     "core-js": "^2.5.4",
+    "datatables.net-dt": "^1.10.19",
     "font-awesome": "^4.7.0",
     "jquery": "^3.4.1",
     "ngx-bootstrap": "^3.3.0",
