--- a/piatrika/package.json
+++ b/piatrika/package.json
@@ -26,6 +26,8 @@
     "datatables.net-dt": "^1.10.19",
     "font-awesome": "^4.7.0",
     "jquery": "^3.4.1",
+    "leaflet": "^1.5.1",
+    "leaflet-routing-machine": "^3.2.12",
     "ngx-bootstrap": "^3.3.0",
     "popper.js": "^1.15.0",
     "rxjs": "~6.2.0",
@@ -39,6 +41,7 @@
     "@types/googlemaps": "^3.30.19",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/leaflet": "^1.4.4",
     "@types/node": "~8.9.4",
     "codelyzer": "~4.3.0",
     "jasmine-core": "~2.99.1",
