--- a/piatrika/package.json
+++ b/piatrika/package.json
@@ -11,7 +11,6 @@
   },
   "private": true,
   "dependencies": {
-    "@agm/core": "^1.0.0-beta.5",
     "@angular/animations": "^6.1.0",
     "@angular/common": "^6.1.0",
     "@angular/compiler": "^6.1.0",
@@ -21,12 +20,15 @@
     "@angular/platform-browser": "^6.1.0",
     "@angular/platform-browser-dynamic": "^6.1.0",
     "@angular/router": "^6.1.0",
+    "@asymmetrik/ngx-leaflet": "^4.0.0",
+    "@asymmetrik/ngx-leaflet-draw": "^3.2.0",
+    "@types/googlemaps": "^3.30.20",
     "bootstrap": "^4.3.1",
     "core-js": "^2.5.4",
-    "datatables.net-dt": "^1.10.19",
     "font-awesome": "^4.7.0",
     "jquery": "^3.4.1",
     "leaflet": "^1.5.1",
+    "leaflet-draw": "^1.0.4",
     "leaflet-routing-machine": "^3.2.12",
     "ngx-bootstrap": "^3.3.0",
     "popper.js": "^1.15.0",
@@ -38,10 +40,8 @@
     "@angular/cli": "~6.2.9",
     "@angular/compiler-cli": "^6.1.0",
     "@angular/language-service": "^6.1.0",
-    "@types/googlemaps": "^3.30.19",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
-    "@types/leaflet": "^1.4.4",
     "@types/node": "~8.9.4",
     "codelyzer": "~4.3.0",
     "jasmine-core": "~2.99.1",
@@ -54,6 +54,6 @@
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
-    "typescript": "~2.9.2"
+    "typescript": "^2.9.2"
   }
 }
