--- a/piatrika/package.json
+++ b/piatrika/package.json
@@ -23,6 +23,8 @@
     "@asymmetrik/ngx-leaflet": "^4.0.0",
     "@asymmetrik/ngx-leaflet-draw": "^3.2.0",
     "@types/googlemaps": "^3.30.20",
+    "@types/leaflet": "^1.4.4",
+    "@types/leaflet-draw": "^0.4.14",
     "bootstrap": "^4.3.1",
     "core-js": "^2.5.4",
     "font-awesome": "^4.7.0",
